--- a/style.css
+++ b/style.css
@@ -219,3 +219,152 @@ div h3, div p{
 .option{
     padding: 0;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+.section-your-option{
+    margin: 80px 70px;
+ 
+}
+.option-header{
+    display: flex;
+    justify-content: space-between;
+    padding: 15px 15px;
+    background-color: rgb(109, 109, 184);
+}
+.option-body{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.option-body p{
+    padding: 15px 20px;
+    border: 1px solid black;
+    width: 1050px;
+    margin-top: 0;
+    margin-bottom: 0%;
+    border-top: none;
+}
+.select-option{
+    border: 1px solid black;
+    padding: 7px 11px;
+    border-left: none;
+    border-top: none;
+    margin-top: 0;
+}
+.news{
+    margin: 80px 70px;
+}
+.new-card{
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    background-color: wheat;
+    border-radius: 24px;
+    margin-bottom: 20px;
+}
+.new-card img{
+    border-radius: 24px;
+}
+.news .time{
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.card2{
+    flex-direction: row-reverse;
+}
+.donate{
+    margin: 80px 70px;
+}
+.donate .donate-heading{
+    text-align: center;
+}
+.donate-btn button{
+    padding: 30px 70px;
+    border-radius: 16px;
+    border: none;
+    background-color: blue;
+}
+.donate-btn{
+    display: flex;
+    justify-content: space-around;
+}
+.donate-btn button:hover{
+    background-color: rgb(112, 177, 214);
+}
+.donate-done-btn{
+    display: flex;
+    justify-content: center;
+}
+.donate-done-btn button{
+    padding: 5px 10px;
+    background-color: green;
+    color: white;
+    border-radius: 5px;
+}
+.donate input{
+    width: 100%;
+    margin: 20px 0px;
+    text-align: center;
+    padding: 10px 0px;
+    border: none;
+    background-color: rgb(89, 170, 170);
+    border-radius: 5px;
+    outline: none;
+}
+.subscribe{
+    background-color: #C6E4D6;
+    margin: 80px 70px;
+    text-align: center;
+    padding: 50px 0px;
+    border-radius: 16px;
+}
+.subscribe form .email-input{
+    padding: 10px 60px;
+    border: none;
+    outline: none;
+    border-top-left-radius: 7px;
+    border-bottom-left-radius: 7px;
+}
+.subscribe .input-btn{
+    padding: 10px 20px;
+    background-color: green;
+    border: none;
+    outline: none;
+    border-top-right-radius: 7px;
+    border-bottom-right-radius: 7px;
+}
+.subscribe form{
+    display: flex;
+    gap: 0px;
+    justify-content: center;
+    align-items: center;
+}
+.footer{
+    background-color: green;
+    text-align: center;
+    margin-bottom: 30px;
+    padding: 30px;
+    border-radius: 10px;
+}
+.footer .social{
+    display: flex;
+    justify-content: center;
+    gap: 18px;
+}
+.footer .social img{
+    width: 20px;
+}
+ 
