--- a/style.css
+++ b/style.css
@@ -21,11 +21,11 @@
     /* text-align: center; */
 } 
 
-div h3, div p{
+/* div h3, div p{
     line-height: ;
-}
+} */
 .banner-containt{
-    line-height: ;
+   
     padding: 50px;
 }
 .title{
@@ -316,14 +316,17 @@ div h3, div p{
     display: flex;
     justify-content: center;
 }
-/* .btn-read{
+/* .btn-done{
     padding:10px 20px;
+    border: none;
 } */
 .donate-done-btn button{
-    padding: 5px 20px;
+    padding: 10px 25px;
     background-color:#006A50;
     color: white;
     border-radius: 5px;
+    border: none;
+    
 }
 .donate input{
     width: 80%;
